--- a/temp-calc/temp.css
+++ b/temp-calc/temp.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background: linear-gradient(90deg, #f8ff00 0%, #3ad59f 100%);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .container{
     display: flex;
     align-items: center;
@@ -16,5 +20,85 @@ input::-webkit-inner-spin-button {
 }
 
 .wrapper{
+    max-width: 600px;
+    margin-top: 150px;
+    border-radius: 15px;
+    padding: 15px;
+    background-color: #ffffff3f;
+    text-align: center;
+}
 
+.wrap-text{
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.temp-input{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 15px;
+    margin-bottom: 20px;
+}
+
+.celsius_box, .fahr_box, .kelv_box{
+    display: flex;
+    justify-content: space-between;
+}
+
+#celsius{
+    font-size: 35px;
+}
+
+#celsius-input{
+    padding: 5px;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background-color: #ffffff9a;
+}
+
+#fahrenheit{
+    font-size: 35px;
+}
+
+#fahrenheit-input{
+    padding: 5px;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background-color: #ffffff9a;
+}
+
+#kelvin{
+    font-size: 35px;
+}
+
+#kelvin-input{
+    padding: 5px;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background-color: #ffffff9a;
+}
+
+#clear{
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+    transition: 0.3s ease;
+}
+
+#clear:hover{
+    background-color: #fff;
+    transform: scale(1.1);
 }
