--- a/temp-calc/temp.css
+++ b/temp-calc/temp.css
@@ -26,6 +26,7 @@ input::-webkit-inner-spin-button {
     padding: 15px;
     background-color: #ffffff3f;
     text-align: center;
+    
 }
 
 .wrap-text{
@@ -96,9 +97,29 @@ input::-webkit-inner-spin-button {
     cursor: pointer;
     width: 100px;
     transition: 0.3s ease;
+    margin-bottom: 15px;
 }
 
 #clear:hover{
     background-color: #fff;
     transform: scale(1.1);
+}
+
+.back{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: black;
+    background-color: #F0F0F0;
+    width: 100px;
+    border-radius: 10px;
+    padding: 5px;
+    transition: 0.3s ease;
+    margin: 0 auto;
+}
+
+.back:hover{
+    transform: scale(1.1);
+    background-color: #fff;
 }
