--- a/pagination/style.css
+++ b/pagination/style.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+    flex-direction: column;
 }
 
 .pagination{
@@ -20,6 +21,7 @@
     background-color: #fff;
     padding: 10px 40px;
     border-radius: 6px;
+    margin-bottom: 20px;
 }
 
 ul{
@@ -84,4 +86,23 @@ ul li.active{
     border: 2.5px solid #3F5EFB;
     color: #3F5EFB;
     outline: none;
+}
+
+.backBtn{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    color: black;
+    background-color: #F0F0F0;
+    width: 100px;
+    border-radius: 10px;
+    padding: 5px;
+    transition: 0.3s ease;
+    margin: 0 auto;
+}
+
+.backBtn:hover{
+    transform: scale(1.1);
+    background-color: #fff;
 }
