--- a/book_api/style.css
+++ b/book_api/style.css
@@ -152,3 +152,19 @@ li{
       transform: rotate(360deg);
     }
   }
+
+  .btn_link{
+    text-decoration: none;
+    background-color: #FC466B;
+    color: #fff;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.3s ease;
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .btn_link:hover{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 5px 8px rgba(252, 70, 107, 0.2);
+  }
