--- a/weather_api/style.css
+++ b/weather_api/style.css
@@ -207,3 +207,25 @@ body{
 .city_hide{
     display: none;
 }
+
+.backBtnblck{
+    position: absolute;
+    top: 20px;
+    left: 15px;
+}
+
+.backBtnblck a{
+    text-decoration: none;
+    background-color: #2B86C5;
+    color: #fff;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.3s ease;
+    font-size: 18px;
+    text-align: center;
+}
+
+.backBtnblck a:hover{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 5px 8px rgba(255, 255, 255, 0.2);
+}
